# uc-tag-studio

./: .gitignore  APP_FLOW.md  INSTALL.md  INSTRUCTIONS.md  README.md  app.py  app.yaml  databricks.yml  pyproject.toml  requirements.txt  run_local.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: BulkCommentBar.tsx  CatalogTree.tsx  CommentSidePanel.tsx  TagEditModal.tsx  Toast.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/tabs/: CommentManagement.tsx  Configuration.tsx  Instructions.tsx  Overview.tsx  Regions.tsx  Setup.tsx  TagManagement.tsx
server/: config.py  dependencies.py
server/routers/: catalogs.py  comments.py  config.py  overview.py  tables.py  tags.py
server/services/: check_cache.py  delta_config.py  unity_catalog.py
setup/: create_config_tables.sql  grants_primary_region.sql  grants_secondary_region.sql  setup_secrets.sh
